--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate:pg",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:setup": "tsx scripts/setup-db.ts"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
@@ -50,6 +51,7 @@
     "genkit": "^1.13.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "pg": "^8.12.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -62,12 +64,14 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "0.20.17",
     "genkit-cli": "^1.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.16.2",
     "typescript": "^5"
   }
 }
